--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ click-plugins==1.1.1
 cligj==0.7.1
 docopt==0.6.2
 et-xmlfile==1.0.1
-Fiona @ file:///C:/Users/maria/pipwin/Fiona-1.8.18-cp38-cp38-win32.whl
+Fiona==1.8.18
 Flask==1.1.2
-GDAL @ file:///C:/Users/maria/pipwin/GDAL-3.1.4-cp38-cp38-win32.whl
-geopandas @ file:///C:/Users/maria/pipwin/geopandas-0.8.1-py3-none-any.whl
+GDAL==
+geopandas==0.8.1
 idna==2.10
 itsdangerous==1.1.0
 jdcal==1.4.1
@@ -19,22 +19,22 @@ Jinja2==2.11.2
 Js2Py==0.70
 MarkupSafe==1.1.1
 munch==2.5.0
-numpy @ file:///C:/Users/maria/pipwin/numpy-1.19.4%2Bvanilla-cp38-cp38-win32.whl
+numpy==1.19.4
 openpyxl==3.0.6
 packaging==20.8
-pandas @ file:///C:/Users/maria/pipwin/pandas-1.1.5-cp38-cp38-win32.whl
+pandas==1.1.5
 Pillow==8.1.0
 pipwin==0.5.0
 pyjsparser==2.7.1
 pyparsing==2.4.7
 PyPrind==2.11.2
-pyproj @ file:///C:/Users/maria/pipwin/pyproj-3.0.0.post1-cp38-cp38-win32.whl
+pyproj==3.0.0
 pySmartDL==1.3.4
 python-dateutil==2.8.1
 pytz==2020.5
 PyYAML==5.3.1
 requests==2.25.1
-Shapely @ file:///C:/Users/maria/pipwin/Shapely-1.7.1-cp38-cp38-win32.whl
+Shapely==1.7.1
 six==1.15.0
 soupsieve==2.1
 tornado==6.1
