--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ docopt==0.6.2
 et-xmlfile==1.0.1
 Fiona==1.8.18
 Flask==1.1.2
-GDAL==
+GDAL==3.1.4
 geopandas==0.8.1
 idna==2.10
 itsdangerous==1.1.0
