--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ chardet==4.0.0
 click==7.1.2
 click-plugins==1.1.1
 cligj==0.7.1
+cycler==0.10.0
 docopt==0.6.2
 et-xmlfile==1.0.1
 Fiona==1.8.18
@@ -17,7 +18,9 @@ itsdangerous==1.1.0
 jdcal==1.4.1
 Jinja2==2.11.2
 Js2Py==0.70
+kiwisolver==1.3.1
 MarkupSafe==1.1.1
+matplotlib==3.3.4
 munch==2.5.0
 numpy==1.19.4
 openpyxl==3.0.6
